# featlib

./: .gitignore  README.md  pyproject.toml
db_notebooks/: etl.ipynb  features_technical.ipynb  pricing.ipynb
notebooks/: 1_local_etl.ipynb  2_create_pricing.ipynb  3_create_features_table.ipynb  4a_feature_engineering_ta.ipynb  4b_feature_engineering_momentum.ipynb  4c_feature_engineering_response_var.ipynb  4d_feature_engineering_cleaning.ipynb  4e_feature_engineering_winsorization.ipynb  4x_feature_engineering_eda.ipynb  5_feature_selection_tests.ipynb  5_ml.ipynb  6a_ml_simple.ipynb  6b_ml_expanding_window.ipynb  701_log_price.ipynb  7_backtest.ipynb  df_factor.csv  dolt_eda.ipynb  model.pkl  model2.pkl  model_final1.pkl  sharpe_results.csv
