[project]
name = "featlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "jupysql>=0.10.17",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numba>=0.61.0",
    "numpy==2.1",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "polars[pyarrow]>=1.21.0",
    "python-dotenv>=1.0.1",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "ta>=0.11.0",
    "toml>=0.10.2",
    "xgboost>=2.1.3",
]
